# ml-refresher

./: .gitignore  Makefile  README.md  myst.yml  pyproject.toml
agent/: __main__.py  harness.py  loop.py  orchestrator.py  phases.py  prompts.py
agent/tools/: __init__.py  assessment.py  code.py  content.py  presentation.py  state.py  visualization.py
cli/: __main__.py  api.py  chunking.py  graph.py  main.py
cli/commands/: code.py  content.py  diagram.py  index.py  progress.py
cli/services/: diagrams.py  executor.py  indexer.py  lessons.py  questions.py  retriever.py  viz_renderer.py
cli/state/: db.py  fsrs.py  progress.py
data/: .gitignore  concept_graph.json
data/viz_library/: manifest.json
docs/: model_guide.md  pytorch_refresher_prd.md  tui_prd.md
interview_questions/: README.md
interview_questions/01_tokenization_and_text/: README.md  tokenization_demo.ipynb  tokenization_demo.py
interview_questions/02_attention_mechanisms/: README.md  attention_demo.ipynb  attention_demo.py
interview_questions/03_transformer_architecture/: README.md  positional_encoding.ipynb  positional_encoding.py
interview_questions/04_context_and_memory/: README.md
interview_questions/05_text_generation/: README.md  sampling_strategies.ipynb  sampling_strategies.py
interview_questions/06_training_objectives/: README.md  training_objectives_demo.ipynb  training_objectives_demo.py
interview_questions/07_embeddings/: README.md  embeddings_demo.ipynb  embeddings_demo.py
interview_questions/08_seq2seq_models/: README.md
interview_questions/09_loss_functions_and_math/: README.md  (+2 more)
scripts/: build_concept_graph.py  build_visualizations.py  eval_models.py  eval_results.txt
tui/: __main__.py  app.py  app.tcss  bridge.py  screens.py  widgets.py
(+62 files in other folders)
