[project]
name = "ml-refresher"
version = "0.1.0"
description = "A comprehensive learning repository for ML concepts, PyTorch, and LLM interview prep"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "jupyter-book>=2.1.0",
    "jupyterlab>=4.5.0",
    "jupytext>=1.18.1",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.14.0",
    "seaborn>=0.13.0",
    "torch>=2.0.0",
    "torchvision>=0.19.0",
    "tqdm>=4.67.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[project.scripts]
mlr = "cli.__main__:mlr"
